# clockradio

./: Cargo.toml  README.md  install.sh  run.sh
src/: main.rs
