[package]
name = "clockradio"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
